# RustMaui

./: .gitignore  AppoMobi.MauiRust.Templates.csproj  BUILDING.md  CHANGELOG.md  Community.MauiRust.Templates.csproj  Community.MauiRust.slnx  Directory.Build.props  Directory.Packages.props  MauiRust.Templates.csproj  README.md  RustMaui Samples.slnx  RustMaui.slnx
.github/workflows/: nuget-release.yml  publish.secrets.txt  publish.yml  test-android.yml  test-ios.yml  test-windows.yml  test.yml  validate-template-android.yml  validate-template-ios.yml  validate-template-windows.yml
content/MauiRust/: MauiRust.sln  Prerequisites.md  check-prerequisites.ps1
content/MauiRust/rust/mauirustnativelib_native/: Cargo.toml
content/MauiRust/rust/mauirustnativelib_native/src/: lib.rs
content/MauiRust/rust/rust_native/: Cargo.toml
content/MauiRust/rust/rust_native/src/: lib.rs
dev/: pack-all-fixed.ps1  pack-all.ps1  pack.ps1  validate-template-fixed.ps1  validate-template-patched.ps1  validate-template.ps1
eng/: pack-all.ps1  validate-template.ps1
nugets/: nugets.md
samples/UseSkiaSharp/: Prerequisites.md  UseSkiaSharp.sln  check-prerequisites.ps1  check-prerequisites.sh
src/Community.MauiRust.Generators/: Community.MauiRust.Generators.csproj  Polyfills.cs  README.md  RustBindingGenerator.cs  RustParser.cs
src/Community.MauiRust.Templates/: Community.MauiRust.Templates.csproj  README.md
src/RustMaui.Generators/: Community.MauiRust.Generators.csproj  README.md  RustBindingGenerator.cs  RustMaui.Generators.csproj  RustParser.cs
src/RustMaui.Tool/: Program.cs  (+3 more)
(+52 files in other folders)
